# Mx-Complier

./: .gitignore  CMakeLists.txt  Calc.g4  Makefile  README.md  main.cpp  test.mx  test.out
.devcontainer/: Dockerfile  setup-antlr.sh
MxAntlr/src/: MxLexer.g4  MxParser.g4
docs/: Optimize.md  README.md
script/: anltr_gen.bat  compile.sh  gen_antlr.sh  gen_builtin.sh  gen_ir.sh
src/: Main.java
src/ASM/: ASMHelper.java  ASMVisitor.java
src/ASM/item/: ASMAddr.java  ASMItem.java  ASMReg.java
src/ASM/node/: ASMBlock.java  ASMNode.java  ASMRoot.java
src/AST/: ASTVisitor.java
src/AST/Node/: ASTNode.java  RootNode.java
src/Allocator/: SSALiveness.java  SSAalloctor.java
src/BackEnd/: NaiveASMBuilder.java
src/Backend/: ASMBuilder.java  NaiveASMBuilder.java
src/Frontend/: ASTBuilder.java  Collector.java  IRBuilder.java  SemanticChecker.java  SemanticCollector.java
src/Grammar/: MxLexer.g4  MxLexer.interp  MxLexer.java  MxParser.g4  MxParser.interp  MxParser.java  MxParser.tokens  MxParserBaseListener.java  MxParserBaseVisitor.java  MxParserListener.java  MxParserVisitor.java
src/IR/: IRhelper.java  IRvisitor.java  structure.md
src/Optimize/: ArithmeticSimplification.java  CFGBuilder.java  DCE.java  GlobalLocalization.java  Inline.java  LoopAnalysis.java  Mem2Reg.java  SCCP.java
src/Util/: ArgumentParser.java  BuiltinElements.java  ExecutionTimer.java  IRLabeler.java  MxErrorListener.java  Pair.java  Type.java  VMemInfo.java  position.java
src/builtin/: Builtin.java  BuiltinASM.java  builtin.c  builtin.ll  builtin.s  builtin_opt.s
(+108 files in other folders)
